--- a/packages/piece-zaizai/package.json
+++ b/packages/piece-zaizai/package.json
@@ -18,10 +18,13 @@
     "pinia-plugin-persistedstate": "^4.0.1",
     "vitepress-md-renderer-web": "workspace:^",
     "vue": "^3.4.37",
+    "vue-draggable-plus": "^0.5.3",
     "vue-router": "^4.4.4"
   },
   "devDependencies": {
+    "@iconify-json/line-md": "^1.2.1",
     "@iconify-json/ph": "^1.2.0",
+    "@types/lodash-es": "^4.17.12",
     "@unocss/preset-icons": "^0.62.3",
     "@vitejs/plugin-vue": "^5.1.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
