--- a/packages/vitepress-md-renderer-web/package.json
+++ b/packages/vitepress-md-renderer-web/package.json
@@ -40,11 +40,14 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/fs-extra": "^11.0.4",
+    "@types/markdown-it": "^14.1.2",
     "@types/markdown-it-attrs": "^4.1.3",
     "@types/markdown-it-container": "^2.0.10",
     "@types/markdown-it-emoji": "^3.0.1",
     "@vitejs/plugin-vue": "^5.1.3",
     "fs-extra": "^11.2.0",
+    "nanoid": "^5.0.7",
+    "picocolors": "^1.1.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.21.2",
     "rollup-plugin-dts": "^6.1.1",
