--- a/package.json
+++ b/package.json
@@ -7,5 +7,18 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "rimraf": "^6.0.1"
+  },
+  "dependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "@vitejs/plugin-vue": "^5.1.3",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "dayjs": "^1.11.13",
+    "lodash-es": "^4.17.21",
+    "vite": "5.4.3",
+    "vue": "^3.5.13",
+    "vue-tsc": "^2.1.10"
+  }
 }
