--- a/packages/piece-zaizai/package.json
+++ b/packages/piece-zaizai/package.json
@@ -9,32 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^11.0.3",
+    "@vueuse/core": "^11.3.0",
     "colord": "^2.9.3",
-    "dayjs": "^1.11.13",
-    "lodash-es": "^4.17.21",
-    "naive-ui": "^2.39.0",
-    "pinia": "^2.2.2",
-    "pinia-plugin-persistedstate": "^4.0.1",
+    "naive-ui": "^2.40.2",
+    "pinia": "^2.2.8",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "vitepress-md-renderer-web": "workspace:^",
-    "vue": "^3.4.37",
     "vue-draggable-plus": "^0.5.3",
-    "vue-router": "^4.4.4"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@iconify-json/line-md": "^1.2.1",
     "@iconify-json/ph": "^1.2.0",
-    "@types/lodash-es": "^4.17.12",
     "@unocss/preset-icons": "^0.62.3",
-    "@vitejs/plugin-vue": "^5.1.2",
-    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass-embedded": "^1.78.0",
     "typescript": "^5.5.3",
     "unocss": "^0.62.3",
-    "unplugin-auto-import": "^0.18.2",
-    "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.3",
-    "vue-tsc": "^2.0.29"
+    "unplugin-auto-import": "^0.18.6",
+    "unplugin-vue-components": "^0.27.5"
   }
 }
