--- a/packages/vitepress-md-renderer-web/package.json
+++ b/packages/vitepress-md-renderer-web/package.json
@@ -48,15 +48,11 @@
     "fs-extra": "^11.2.0",
     "nanoid": "^5.0.7",
     "picocolors": "^1.1.0",
-    "rimraf": "^6.0.1",
     "rollup": "^4.21.2",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild": "^6.1.1",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "vite": "^5.4.3",
-    "vue": "^3.5.3",
-    "vue-tsc": "^2.0.29"
+    "rollup-plugin-visualizer": "^5.12.0"
   },
   "dependencies": {
     "@mdit-vue/plugin-headers": "^2.1.3",
