--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
     "vite": "5.4.3",
-    "vue": "^3.5.13",
-    "vue-tsc": "^2.1.10"
+    "vue": "^3.5.13"
   }
 }
