--- a/packages/vitepress-md-renderer-web/package.json
+++ b/packages/vitepress-md-renderer-web/package.json
@@ -66,6 +66,11 @@
     "markdown-it-container": "^4.0.0",
     "markdown-it-emoji": "^3.0.0",
     "markdown-it-mathjax3": "^4.3.2",
-    "shiki": "^1.16.3"
+    "shiki": "^1.16.3",
+    "typescript": "5.6.2",
+    "vue-tsc": "2.0.29"
+  },
+  "volta": {
+    "node": "22.11.0"
   }
 }
