加了unplugin-icons插件，icons文档，其他一些东西

--- a/packages/piece-zaizai/tsconfig.json
+++ b/packages/piece-zaizai/tsconfig.json
@@ -19,7 +19,7 @@
     "jsxFactory": "h",
     "jsxFragmentFactory": "Fragment",
     "lib": ["esnext", "dom", "dom.iterable"],
-    "types": ["vite/client"],
+    "types": ["vite/client", "unplugin-icons/types/vue"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
