--- a/packages/piece-zaizai/package.json
+++ b/packages/piece-zaizai/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.5.3",
     "unocss": "^0.62.3",
     "unplugin-auto-import": "^0.18.6",
+    "unplugin-icons": "^0.22.0",
     "unplugin-vue-components": "^0.27.5"
   }
 }
