--- a/packages/bun-server/package.json
+++ b/packages/bun-server/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@koa/router": "^13.1.0",
-    "koa": "^2.15.3"
+    "koa": "^2.15.3",
+    "path-to-regexp": "^8.2.0"
   }
 }
