--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "pnpm -F piece-zaizai dev"
+    "dev": "pnpm -F piece-zaizai dev",
+    "bun": "pnpm -F bun-server dev"
   },
   "keywords": [],
   "author": "",
