文件移动，静态文件中间件

--- a/packages/bun-server/.gitignore
+++ b/packages/bun-server/.gitignore
@@ -1,5 +1,9 @@
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
+public/img
+public/uploads
+public/uploads_file
+
 # Logs
 
 logs
