--- a/packages/piece-zaizai/package.json
+++ b/packages/piece-zaizai/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shikijs/monaco": "^1.26.1",
     "@vueuse/core": "^11.3.0",
     "colord": "^2.9.3",
+    "monaco-editor": "^0.52.2",
     "naive-ui": "^2.40.2",
     "pinia": "^2.2.8",
     "pinia-plugin-persistedstate": "^4.1.3",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@iconify-json/line-md": "^1.2.1",
     "@iconify-json/ph": "^1.2.0",
+    "@iconify-json/vscode-icons": "^1.2.10",
     "@unocss/preset-icons": "^0.62.3",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass-embedded": "^1.78.0",
@@ -28,6 +31,7 @@
     "unocss": "^0.62.3",
     "unplugin-auto-import": "^0.18.6",
     "unplugin-icons": "^0.22.0",
-    "unplugin-vue-components": "^0.27.5"
+    "unplugin-vue-components": "^0.27.5",
+    "vite-plugin-monaco-editor-esm": "^2.0.1"
   }
 }
