--- a/packages/bun-server/package.json
+++ b/packages/bun-server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@koa/router": "^13.1.0",
     "koa": "^2.15.3",
+    "nanoid": "^5.0.7",
     "path-to-regexp": "^8.2.0"
   }
 }
