--- a/packages/bun-server/tsconfig.json
+++ b/packages/bun-server/tsconfig.json
@@ -12,7 +12,9 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "typeRoots": ["./node_modules/@types"]
   },
+  "include": ["**/*.ts", "./global.d.ts"],
   "exclude": ["**/node_modules/**"]
 }
