--- a/packages/bun-server/package.json
+++ b/packages/bun-server/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.0.7",
     "path-to-regexp": "^8.2.0"
