--- a/packages/piece-zaizai/.env.development
+++ b/packages/piece-zaizai/.env.development
@@ -1,12 +1,11 @@
-
 # API 接口地址
-VITE_GLOB_API_URL="http://localhost:7379"
+VITE_GLOB_API_URL="http://localhost:7373"
 
 # 图片前缀地址
-VITE_GLOB_IMG_URL="http://localhost:7379"
+VITE_GLOB_IMG_URL="http://localhost:7373"
 
 # 接口前缀
-VITE_GLOB_API_URL_PREFIX=""
+VITE_GLOB_API_URL_PREFIX="/"
 
 # 路由方式
 VITE_GLOB_ROUTER_FN = "HashRouter"
