--- a/packages/piece-zaizai/.env.devpro
+++ b/packages/piece-zaizai/.env.devpro
@@ -1,8 +1,8 @@
 # API 接口地址
-VITE_GLOB_API_URL="https://118.193.47.111"
+VITE_GLOB_API_URL="http://118.193.47.111"
 
 # 图片前缀地址
-VITE_GLOB_IMG_URL="https://118.193.47.111"
+VITE_GLOB_IMG_URL="http://118.193.47.111"
 
 # 接口前缀
 VITE_GLOB_API_URL_PREFIX="/bun-server"
