--- a/packages/piece-zaizai/package.json
+++ b/packages/piece-zaizai/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "devpro": "vite --mode devpro",
-    "build": "vue-tsc -b && vite build",
+    "build": "rimraf dist && vite build && bun ./build/build-linux.ts",
+    "build-tsc": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
