--- a/packages/piece-zaizai/.env.development
+++ b/packages/piece-zaizai/.env.development
@@ -8,4 +8,4 @@ VITE_GLOB_IMG_URL="http://localhost:7379"
 VITE_GLOB_API_URL_PREFIX="/"
 
 # 路由方式
-VITE_GLOB_ROUTER_FN = "HashRouter"
+VITE_GLOB_ROUTER_FN = "hash"
