--- a/packages/piece-zaizai/.env.production
+++ b/packages/piece-zaizai/.env.production
@@ -11,7 +11,7 @@ VITE_GLOB_API_URL_PREFIX="/bun-server"
 VITE_GLOB_ROUTER_PREFIX="/"
 
 # 路由方式
-VITE_GLOB_ROUTER_FN = "history"
+VITE_GLOB_ROUTER_FN = "hash"
     
 # 项目 base
 VITE_BASE_URL="./"
