--- a/packages/piece-zaizai/.env.devpro
+++ b/packages/piece-zaizai/.env.devpro
@@ -10,3 +10,6 @@ VITE_GLOB_API_URL_PREFIX="/bun-server"
 
 # 路由方式
 VITE_GLOB_ROUTER_FN = "HashRouter"
+
+# 是否禁用 inline css 主题变量
+VITE_INLINE_THEME=0
