--- a/packages/piece-zaizai/.env.development
+++ b/packages/piece-zaizai/.env.development
@@ -1,8 +1,8 @@
 # API 接口地址
-VITE_GLOB_API_URL="http://192.168.1.106:7379"
+VITE_GLOB_API_URL="http://localhost:7379"
 
 # 图片前缀地址
-VITE_GLOB_IMG_URL="http://192.168.1.106:7379"
+VITE_GLOB_IMG_URL="http://localhost:7379"
 
 # 接口前缀
 VITE_GLOB_API_URL_PREFIX="/"
