--- a/packages/bun-server/package.json
+++ b/packages/bun-server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "bun --watch index.ts"
+    "dev": "bun --watch index.ts",
+    "build": "bun ./build/ssh.ts"
   },
   "keywords": [],
   "author": "",
