主要更新ssh上传，其他修改 bug，demo

--- a/packages/bun-server/.env.development
+++ b/packages/bun-server/.env.development
@@ -1,2 +1,11 @@
+# 不设置会是 undefined
+NODE_ENV=development
+
 ZAI_PORT=7379
 ZAI_ROUTER_RPEFIX=
+
+SSH_HOST=192.168.238.128
+SSH_PORT=22
+SSH_USER=root
+SSH_PASSWORD=123456
+SSH_UPLOAD_PATH=/www/zaizai-workspace
