--- a/packages/bun-server/package.json
+++ b/packages/bun-server/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "bun --watch index.ts",
-    "build": "bun ./build/ssh.ts"
+    "build": "set NODE_ENV=production&& bun ./build/ssh.ts",
+    "build:dev": "set NODE_ENV=development&& bun ./build/ssh/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0",
+    "inquirer": "^12.5.2",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.0.7",
     "path-to-regexp": "^8.2.0"
