--- a/packages/piece-zaizai/.env
+++ b/packages/piece-zaizai/.env
@@ -1,3 +1,5 @@
 VITE_GITHUB = https://github.com/Git-zaizai/zaizai-workspace
 # 是否开启  rollup-plugin-visualizer 分析插件
 VITE_VISUZLIZER=true
+# 打包是否开启 Sourcemap
+VITE_SOURCE_MAP=hidden
