--- a/packages/piece-zaizai/package.json
+++ b/packages/piece-zaizai/package.json
@@ -8,8 +8,8 @@
     "dev:local": "vite --mode devprolocal",
     "devpro": "vite --mode devpro",
     "build-dev": "rimraf dist && vite build",
-    "build-local": "rimraf dist && vite build --mode devprolocal && bun ./build/build-ftp-liunx.ts",
-    "build": "rimraf dist && vite build && bun ./build/build-linux.ts",
+    "build-local": "rimraf dist && vite build --mode devprolocal && set NODE_ENV=devprolocal && bun ./build/build-ftp-liunx.ts",
+    "build": "rimraf dist && vite build && set NODE_ENV=production && bun ./build/build-linux.ts",
     "build-tsc": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
