fix: 添加定时服务，修复Bug，调整后端存储，改了一大堆

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "dev": "pnpm -F piece-zaizai dev",
-    "bun": "pnpm -F bun-server dev"
+    "bun": "pnpm -F bun-server dev",
+    "delete:nodemodelus": "bun script/delete-node-modules.js"
   },
   "keywords": [],
   "author": "",
