--- a/packages/bun-server/.env.development
+++ b/packages/bun-server/.env.development
@@ -8,4 +8,10 @@ SSH_HOST=192.168.238.128
 SSH_PORT=22
 SSH_USER=root
 SSH_PASSWORD=123456
+
+# 上传路径 部署路径
 SSH_UPLOAD_PATH=/www/zaizai-workspace
+# 日志文件
+ZAI_LOGS_PATH=/www/logs
+# 数据文件存放
+ZAI_DATA_PATH=/www/data
