--- a/packages/bun-server/.env.production
+++ b/packages/bun-server/.env.production
@@ -3,4 +3,10 @@ NODE_ENV=production
 
 ZAI_PORT=7379
 ZAI_ROUTER_RPEFIX=/bun-server
+
+# 上传路径 部署路径
 SSH_UPLOAD_PATH=/www/zaizai-workspace
+# 日志文件
+ZAI_LOGS_PATH=/www/logs
+# 数据文件存放
+ZAI_DATA_PATH=/www/data
