--- a/packages/bun-server/package.json
+++ b/packages/bun-server/package.json
@@ -24,6 +24,7 @@
     "nanoid": "^5.0.7",
     "node-schedule": "^2.1.1",
     "openai": "^4.97.0",
-    "path-to-regexp": "^8.2.0"
+    "path-to-regexp": "^8.2.0",
+    "pino": "^9.6.0"
   }
 }
