动态修改版本号

--- a/packages/piece-zaizai/.env.devpro
+++ b/packages/piece-zaizai/.env.devpro
@@ -9,7 +9,13 @@ VITE_GLOB_IMG_URL="http://118.193.47.111"
 VITE_GLOB_API_URL_PREFIX="/bun-server"
 
 # 路由方式
-VITE_GLOB_ROUTER_FN = "HashRouter"
+VITE_GLOB_ROUTER_FN="HashRouter"
 
 # 是否禁用 inline css 主题变量
 VITE_INLINE_THEME=0
+
+# 是否上传map文件
+VITE_UPLOAD_MAP=true
+
+# 打包是否开启 Sourcemap
+VITE_SOURCE_MAP=true
