--- a/packages/piece-zaizai/.env.production
+++ b/packages/piece-zaizai/.env.production
@@ -11,7 +11,7 @@ VITE_GLOB_API_URL_PREFIX="/bun-server"
 VITE_GLOB_ROUTER_PREFIX="/"
 
 # 路由方式
-VITE_GLOB_ROUTER_FN = "hash"
+VITE_GLOB_ROUTER_FN="hash"
     
 # 项目 base
 VITE_BASE_URL="./"
@@ -21,3 +21,6 @@ VITE_INLINE_THEME=0
 
 # 是否上传map文件
 VITE_UPLOAD_MAP=false
+
+# 打包是否开启 Sourcemap
+VITE_SOURCE_MAP=hidden
