--- a/packages/piece-zaizai/.env.development
+++ b/packages/piece-zaizai/.env.development
@@ -8,7 +8,13 @@ VITE_GLOB_IMG_URL="http://localhost:7379"
 VITE_GLOB_API_URL_PREFIX="/"
 
 # 路由方式
-VITE_GLOB_ROUTER_FN = "hash"
+VITE_GLOB_ROUTER_FN="hash"
 
 # 是否禁用 inline css 主题变量
 VITE_INLINE_THEME=0
+
+# 是否上传map文件
+VITE_UPLOAD_MAP=true
+
+# 打包是否开启 Sourcemap
+VITE_SOURCE_MAP=true
