--- a/packages/piece-zaizai/.env.devprolocal
+++ b/packages/piece-zaizai/.env.devprolocal
@@ -12,7 +12,7 @@ VITE_GLOB_API_URL_PREFIX="/bun-server"
 VITE_GLOB_ROUTER_PREFIX="/"
 
 # 路由方式
-VITE_GLOB_ROUTER_FN = "hash"
+VITE_GLOB_ROUTER_FN="hash"
     
 # 项目 base
 VITE_BASE_URL="./"
@@ -22,3 +22,6 @@ VITE_INLINE_THEME=1
 
 # 是否上传map文件
 VITE_UPLOAD_MAP=true
+
+# 打包是否开启 Sourcemap
+VITE_SOURCE_MAP=true
