后端设置请求体大小，文件上传流写入

--- a/packages/bun-server/.env.production
+++ b/packages/bun-server/.env.production
@@ -3,6 +3,8 @@ NODE_ENV=production
 
 ZAI_PORT=7379
 ZAI_ROUTER_RPEFIX=/bun-server
+// 最大请求体大小 默认 MB
+ZAI_maxRequestBodySize=200
 
 # 上传路径 部署路径
 SSH_UPLOAD_PATH=/www/zaizai-workspace
