--- a/packages/bun-server/.env.development
+++ b/packages/bun-server/.env.development
@@ -3,6 +3,8 @@ NODE_ENV=development
 
 ZAI_PORT=7379
 ZAI_ROUTER_RPEFIX=
+// 最大请求体大小 默认 MB
+ZAI_maxRequestBodySize=200
 
 SSH_HOST=192.168.238.128
 SSH_PORT=22
