--- a/packages/piece-zaizai/.env
+++ b/packages/piece-zaizai/.env
@@ -1,5 +1,5 @@
 VITE_GITHUB = https://github.com/Git-zaizai/zaizai-workspace
 # 是否开启  rollup-plugin-visualizer 分析插件
-VITE_VISUZLIZER=true
+VITE_VISUZLIZER=false
 # 版本号
 VITE_APP_VERSION=0.3.0
