--- a/packages/bun-server/link.conf
+++ b/packages/bun-server/link.conf
@@ -1,47 +1,56 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
+    server_name  xxx.xxx.xxx.xxx;
+    index index.php index.html index.htm default.php default.htm default.html;
+    root  /www/piece-zaizai/dist/;
 
-    #access_log  /var/log/nginx/host.access.log  main;
-    access_log /home/nginx/conf/host.access.log main;
+    # 设置单次请求大小
+    client_max_body_size 200m;
 
-    location ^~ /bun-server {
-        proxy_pass http://localhost:7379/;
+    # logging - 使用相对路径，Nginx会在默认日志目录创建文件
+    access_log  /var/log/link_access.log main buffer=32k flush=5m;
+    error_log   /var/log/link_error.log error;
+
+
+    # index.html fallback
+    #location / {
+    #    try_files $uri $uri/ /index.html;
+    #}
+
+    location /bun-server {
+        proxy_pass http://127.0.0.1:7379;
         proxy_set_header Host $host;
         proxy_set_header X-Real-PORT $remote_port;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # 将路径中的 /gadgets 替换为 /
-        rewrite ^/bun-server(.*)$ $1 break;
+        #rewrite ^/bun-server(.*)$ $1 break;
     }
 
-    location ~* ^/bun-server/(.+\.css|.+\.js)$ {
-      proxy_pass http://localhost:7379/$1;
+     location ~* ^/bun-server/(.+\.css|.+\.js)$ {
+        proxy_pass http://127.0.0.1:7379/$1;
+    }
+    
+    location /test {
+        root   /root/nginx/html/test.html;
     }
 
-    location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
-    {
+    location /gift-book {
+        alias /www/html/gift-book;
+        index index.php index.html index.htm default.php default.htm default.html;
+        try_files $uri $uri/ =404;
+    }
+
+    location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$ {
         expires      30d;
         error_log /dev/null;
         access_log /dev/null;
     }
 
-    location ~ .*\.(js|css)?$
-    {
+    location ~ .*\.(js|css)?$ {
         expires      12h;
         error_log /dev/null;
         access_log /dev/null;
     }
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
 }
-
