简单的文本

--- a/packages/bun-server/link.conf
+++ b/packages/bun-server/link.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  xxx.xxx.xxx.xxx;
+    server_name  118.193.47.111;
     index index.php index.html index.htm default.php default.htm default.html;
     root  /www/piece-zaizai/dist/;
 
@@ -36,21 +36,18 @@ server {
         root   /root/nginx/html/test.html;
     }
 
+    # gift-book 配置
     location /gift-book {
         alias /www/html/gift-book;
         index index.php index.html index.htm default.php default.htm default.html;
         try_files $uri $uri/ =404;
     }
 
-    location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$ {
-        expires      30d;
-        error_log /dev/null;
-        access_log /dev/null;
-    }
-
-    location ~ .*\.(js|css)?$ {
-        expires      12h;
-        error_log /dev/null;
-        access_log /dev/null;
+     # gift-book 静态资源配置 (优化版)
+    location /gift-book/static/ {
+        alias /www/html/gift-book/static/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
     }
 }
